Fix the Categories headings padding to align with the content boxes in mobile view.

--- a/mod2_solution/css/style.css
+++ b/mod2_solution/css/style.css
@@ -10,7 +10,7 @@ body {
 
 h2 {
 	font-size: 175%;
-	padding: 20px 20px 20px 20px;
+	padding: 20px 10px 20px 10px;
 	/* Set a min height to keep the section boxes from jumping when the resizing to the mobile view */
 	min-height: 75px; 
 }
